Shenandoah: A couple of virtual thread tests failed with iu mode even without Loom enabled.

XMLWordPrintable

    • gc
    • b04

        serviceability/jvmti/vthread/SuspendResume1/SuspendResume1.java
        serviceability/jvmti/vthread/VThreadTest/VThreadTest.java

        Failed without Loom enabled.

        To reproduce:
        make CONF=linux-x86_64-server-fastdebug TEST_VM_OPTS="-XX:+UseShenandoahGC -XX:+UnlockExperimentalVMOptions -XX:ShenandoahGCMode=iu" run-test TEST=hotspot_loom

        #
        # Internal Error (/home/zgu/ws/jdk/src/hotspot/share/gc/shenandoah/c2/shenandoahSupport.cpp:2666), pid=717559, tid=717606
        # Error: assert(new_mem->outcnt() > 0) failed
        #
        # JRE version: OpenJDK Runtime Environment (19.0) (fastdebug build 19-internal-adhoc.zgu.jdk)
        # Java VM: OpenJDK 64-Bit Server VM (fastdebug 19-internal-adhoc.zgu.jdk, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, shenandoah gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x1a17564] MemoryGraphFixer::fix_mem(Node*, Node*, Node*, Node*, Node*, Unique_Node_List&)+0xc14







              Assignee:
              Roland Westrelin
              Reporter:
              Zhengyu Gu
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: