8287227: Shenandoah: A couple of virtual thread tests failed with iu mode even without Loom enabled.

Backport-of: 210a06a287521a554316a9052bd9fdf616c7b884